fact card gap update

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -154,9 +154,12 @@ height:800px;
     height: 150px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 10px;
-    padding-left: 10px;
-    margin-left: 20px;
+    padding-left: 15px;
+} 
+.feature-card-gap{
+    padding: 7px;
 }
+
 .new-pad{
     padding-top: 15px;
 }
