Mobile Response Updaete

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -127,8 +127,8 @@ font-size: 45px;
 /* Features love & enjoy Section */
 .feature-title{
     font-weight: 650;
-font-size: 45px;
-margin-right: 150px;
+    font-size: 45px;
+    margin-right: 150px;
 
 }
 .border-left-side{
@@ -262,8 +262,8 @@ footer{
     height: 100px; 
     margin: 0 100px;
     background: #efdbe4;
+    justify-content: center;
     text-align: center;
-    
 }
 
 footer h2{
@@ -280,6 +280,13 @@ footer h2{
 .contact-div{
     padding: 10px 60px;
 }
+.contact-title{
+    margin-top: 130px; 
+    text-align: center;
+    color: #151414;
+    font-weight: 700;
+    font-size: 40px;
+ }
 .contact-box {
     display: flex;
     gap: 30px;
@@ -311,3 +318,118 @@ footer h2{
     color: var(--btn-color);
   }
   
+@media only screen and (max-width: 576px) {
+    .header{
+        width: 100%;
+    }
+    .header img{
+        width: 100%;
+    }
+    nav{
+        flex-direction: column;
+        
+    }
+    nav ul{
+        flex-direction: column;
+        gap: 20px;
+        align-items: start;
+        padding-right: 60px;
+    }
+    .quick-list{
+        flex-direction: column;
+        /* justify-content: center; */
+      
+        justify-items: center;
+        
+    }
+    .third-row-second-container{
+        grid-template-columns: repeat(1, 1fr);
+        
+    }
+    .third-row-second-container img {
+        height: 280px;
+        width: 280px;
+        margin-left: 50px;
+        margin-right: 80px;
+        text-align: center;
+        
+    }
+    .quick-list-description{
+        padding-left: 110px;
+    }
+    .features-container{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .feature-title{
+        font-weight: 600;
+        font-size: 40px;
+        margin-right: 150px;
+        padding-bottom: 40px;
+    
+    }
+    
+    .feature-description{
+        padding-bottom: 20px;
+        padding-right: 20px;
+
+    }
+    .features-container img{
+        height: 500px;
+        width: 410px;
+    }
+    .facts-container{
+        flex-direction: column;
+        margin-left: 150px;
+    }
+    .facts-section-description{
+       padding: 0 40px;
+       margin-left: 20px;
+       
+       
+    }
+    .section-facts{
+        /* padding: 0, 50px; */
+        justify-items: center;
+        padding: 0 32%;
+    }
+    .sponsors-container{
+        flex-direction: column;
+        align-content: space-around;
+    }
+    .sponsors-container img{
+        align-content: center;
+        
+
+        /* padding: 0 70%; */
+        
+    }
+    /* .section-sponsors{
+      margin-left: 350px;
+      
+    } */
+    /* .sponsor-description{
+        padding-left: 345px;
+    } */
+    .contact-box{
+        flex-direction: column;
+        padding: 0 45px;
+        
+    }
+    .footer-media{
+        justify-items: center;
+       width: 390px;
+       height: 145px;
+
+    }
+    
+    
+}
+
+@media only screen and (min-width: 578px) and (max-width: 992px)  {
+    
+    
+}
+.hide{
+    display: none;
+}
