--- a/styles/styles.css
+++ b/styles/styles.css
@@ -259,8 +259,8 @@ height:800px;
 
 footer{
     width: 1000px;
-    height: 100px; 
-    margin: 0 100px;
+    height: 110px; 
+    margin: 0 14%;
     background: #efdbe4;
     justify-content: center;
     text-align: center;
@@ -303,6 +303,9 @@ footer h2{
     color: var(--text-color);
     transition: 0.3s;
     min-height: 200px;
+  }
+  .contact{
+    padding-bottom: 60px;
   }
   .single-box h3 {
     font-size: 24px;
@@ -399,18 +402,8 @@ footer h2{
     }
     .sponsors-container img{
         align-content: center;
-        
-
-        /* padding: 0 70%; */
-        
     }
-    /* .section-sponsors{
-      margin-left: 350px;
-      
-    } */
-    /* .sponsor-description{
-        padding-left: 345px;
-    } */
+    
     .contact-box{
         flex-direction: column;
         padding: 0 45px;
